project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
  namespace: project
  labels:
    app: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
        version: v1
    spec:
      containers:
        - name: project
          image: asia.gcr.io/stable-device-253005/go-grpc-microservices-project
          imagePullPolicy: Always
          ports:
            - name: grpc-port
              containerPort: 50051
              protocol: TCP
