project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-service
  namespace: project
  labels:
    app: project
spec:
  selector:
    app: project
  type: ClusterIP
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc-port
      protocol: TCP
