project/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: project-rule
  namespace: project
spec:
  host: project-service.project.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
