project/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-route
  namespace: project
spec:
  hosts:
    - project-service.project.svc.cluster.local
  http:
    - match:
        - port: 50051
      route:
        - destination:
            host: project-service.project.svc.cluster.local
            subset: v1
